Responsiveness fix; now works on iPhone 5 and lower

--- a/static/css/new_timetable/mobile.css
+++ b/static/css/new_timetable/mobile.css
@@ -215,7 +215,11 @@ hr {
     margin-left:25%;
   }
 }
-
+@media (max-width: 360px) {
+  .nav-double-next, .nav-double-prev {
+    display:none;
+  }
+}
 
 .fb-like {
     margin-top: 10px;
